// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`File utils No Workspace removeImportUsingTsMorph should allow for being called multiple times on the same file 1`] = `
"import { A, C } from './module';

export class TestClass {}
      "
`;

exports[`File utils No Workspace removeImportUsingTsMorph should remove a named import from import declaration 1`] = `
"import { Component, OnInit } from '@angular/core';

export class TestClass implements OnInit, OnDestroy {
  ngOnInit() {}
  ngOnDestroy() {}
}
      "
`;

exports[`File utils No Workspace removeImportUsingTsMorph should remove entire import declaration if last named import is removed 1`] = `
"import { Component } from '@angular/core';

export class TestClass {}
      "
`;
